pop-up screen height fixed on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -586,6 +586,10 @@ input[type=submit]:hover {
     .passion-p {
         display: none;
     }
+
+    .popUpScreen {
+        height: 50%;
+    }
 }
 
 @media screen and (max-width: 415px) {
